Enable OPUS and VP9 codecs on Android for Clear Key key system

Code in MimeUtil::IsCodecSupportedOnPlatform() now does the correct
check to determine if OPUS or VP9 is supported on the platform, so
the old code that disabled those codecs on Android is no longer needed.

BUG=652896

Review-Url: https://codereview.chromium.org/2394873004
Cr-Commit-Position: refs/heads/master@{#423428}

Former-commit-id: 7b3840dcaad1e52f50053230327259eeb26eba89